fix: spacing and fontsize issues

--- a/src/general.scss
+++ b/src/general.scss
@@ -26,7 +26,7 @@ h1 {
     font-family: rig-solid-bold-outline, sans-serif;
     font-weight: 900;
     font-style: normal;
-    font-size: 28vw;
+    font-size: 25vw;
 }
 h2 {
     font-family: canada-type-gibson, sans-serif;
